syntax = "proto3";

package chat;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
  rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc ListMessages (ListMessagesRequest) returns (ListMessagesResponse);
}

message CreateRoomRequest {
  string name = 1;
}

message CreateRoomResponse {
  string roomID = 1;
  string invite_code = 2;
}

message JoinRoomRequest {
  string invite_code = 1;
}

message JoinRoomResponse {}

message SendMessageRequest {
  string roomID = 1;
  string content = 2;
}

message SendMessageResponse {}

message ListMessagesRequest {
  string roomID = 1;
}

message Message {
  string messageID = 1;
  string senderID = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}
