syntax = "proto3";

package chat;

option java_package = "com.example.chat.grpc";
option java_multiple_files = true;

service ChatService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc CreateConversation (CreateConversationRequest) returns (CreateConversationResponse);
  rpc GetConversation (GetConversationRequest) returns (GetConversationResponse);
  rpc ListConversations (ListConversationsRequest) returns (ListConversationsResponse);
}

// GET CONVERSATIONS
message GetConversationRequest {
  string conversationId = 1;
}

message GetConversationResponse {
  string conversationId = 1;
  repeated ChatMessage messages = 2;
}

message ChatMessage {
  string messageId = 1;
  string senderId = 2;
  string text = 3;
}

// CREATE CONVERSATIONS
message CreateConversationRequest {
  string conversationId = 1;
  repeated string memberIds = 2;
}

message CreateConversationResponse {
  bool ok = 1;
  string error = 2;
}

// SEND MESSAGES 
message SendMessageRequest {
  string messageId = 1;
  string conversationId = 2;
  string senderId = 3;
  string text = 4;
}

message SendMessageResponse {
  bool ok = 1;
  string error = 2;
}

// LIST CONVERSATIONS
message ListConversationsRequest {
  string userId = 1;
}

message ListConversationsResponse {
  repeated string conversationId = 1;
}